# anthropic-mcp

./: .env-example  .gitignore  .gitmodules  README.md
mcp-client/: .gitignore  client.py  pyproject.toml
weather/: pyproject.toml
weather/src/weather/: server.py
