[project]
name = "mcp-server-weather"
version = "0.1.0"
description = "Weather information server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.1.1",
]

[project.scripts]
mcp-server-weather = "mcp_server_weather:main"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"